<resources>
    <string name="app_name">MyBeers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birra_nome">Nome</string>
    <string name="birra_produttore">Produttore</string>
    <string name="segnaposto">Abcdefg</string>
    <string name="label_produttore">Produttore:</string>
    <string name="label_gradazione">Gradazione:</string>
    <string name="hint_nome">Nome birra</string>
    <string name="hint_produttore">Produttore</string>
    <string name="hint_gradazione">Gradazione</string>
    <string name="menuConferma">Conferma</string>
    <string name="valCampiObbligatori">Tutti i campi sono obbligatori</string>
</resources>
