<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".BirraEditFragment">

    <TextView
            android:text="@string/label_produttore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBaseline_toBaselineOf="@+id/editProduttore"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <TextView
            android:text="@string/label_gradazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBaseline_toBaselineOf="@+id/editGradazione"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editProduttore" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editNome"
            app:layout_constraintStart_toStartOf="@+id/editNome" android:hint="@string/hint_produttore"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editGradazione" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editProduttore"
            app:layout_constraintStart_toStartOf="@+id/editProduttore" android:hint="@string/hint_gradazione"/>
    <TextView
            android:text="@string/birra_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBaseline_toBaselineOf="@+id/editNome"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editNome" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="64dp" android:hint="@string/hint_nome"/>
    <ImageView
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="301dp"
            android:layout_height="328dp"
            android:id="@+id/pick_image"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editGradazione" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.391"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="55dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"/>

</android.support.constraint.ConstraintLayout>