<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".BirraFragment">
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textNome" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/label_produttore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textNome"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textProduttore" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView2"/>
    <TextView
            android:text="@string/label_gradazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textGradazione"
            app:layout_constraintStart_toStartOf="@+id/textProduttore"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"/>
</android.support.constraint.ConstraintLayout>